Remove hacky fix for extra space before date inputs
git-svn-id: http://textpattern.googlecode.com/svn/development/4.x@4291 2fea6a4d-a838-0410-917b-93a53c48e9d2

--- a/textpattern/theme/hive/css/textpattern.css
+++ b/textpattern/theme/hive/css/textpattern.css
@@ -1942,12 +1942,6 @@ body#page-setup {
 #dates .time .label {
   display: block;
 }
-#dates .date input.year,
-#dates .time input.hour,
-#dates .date input.exp_year,
-#dates .time input.exp_hour {
-  margin-left: -0.61538em;
-}
 
 .recent {
   list-style: decimal-leading-zero;
